添加jvm 参数信息